--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="12dp"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/mainContainer"
+        android:visibility="visible"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="100">
-
-        <EditText
-            android:id="@+id/etCityName"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:paddingStart="10dp"
-            android:layout_marginTop="2dp"
-            android:background="@drawable/border_edittext"
-            android:hint="@string/city_name"
-            android:layout_weight="70"
-            android:importantForAutofill="no"
-            tools:ignore="RtlSymmetry,TextFields" />
-
-        <Button
-            android:id="@+id/btnSearch"
-            android:layout_width="0dp"
-            android:layout_height="47dp"
-            android:layout_weight="30"
-            android:background="@drawable/background_button"
-            android:text="@string/search" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="40dp">
-
-        <ImageView
-            android:id="@+id/iconWeather"
-            android:layout_width="150dp"
-            android:src="@drawable/icon"
-            android:scaleType="centerCrop"
-            android:layout_height="150dp"
-            android:contentDescription="@string/todo" />
-
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
         <LinearLayout
+            android:id="@+id/addressContainer"
+            android:orientation="vertical"
+            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            tools:ignore="UselessParent">
 
             <TextView
+                android:id="@+id/address"
+                android:textSize="24sp"
+                android:text="@string/location"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:text="@string/_20_c"/>
+                android:layout_height="wrap_content">
+                 </TextView>
+
             <TextView
+                android:id="@+id/updated_at"
+                android:textSize="14sp"
+                android:text="@string/updated_at"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:text="@string/landon_us"/>
+                android:layout_height="wrap_content">
+            </TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/overviewContainer"
+            android:orientation="vertical"
+            android:layout_centerInParent="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="UselessParent">
+
         </LinearLayout>
 
-    </LinearLayout>
-    <ListView
-        android:id="@+id/lvDailyWeather"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+    </RelativeLayout>
+
+    </RelativeLayout>
